inspect code